--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -196,7 +196,6 @@
   },
   "pillarsSection": {
     "heading": "من الفكرة إلى التسليم: ركائز استثمارنا",
-
     "pillar1": {
       "title": "لماذا تستثمر في دبي؟",
       "intro": "تُعد دبي واحدة من أقوى مدن الاستثمار في العالم، وتوفر بيئة مثالية لنمو ثروتك العقارية واستقرارك المالي على المدى الطويل.",
@@ -208,7 +207,6 @@
       "point6": "طلب عالمي متزايد على العقارات في دبي من مستثمرين ومستخدمين نهائيين.",
       "point7": "سهولة تملّك العقار للأجانب مع إجراءات ميسّرة وواضحة."
     },
-
     "pillar2": {
       "title": "ما هو الملف العقاري (محفظة عقارية)؟",
       "intro": "امتلاك أكثر من عقار واحد – جاهز وتحت الإنشاء – بهدف بناء ثروة عقارية قوية ومتنوعة ومتوازنة.",
@@ -217,7 +215,6 @@
       "point3": "تعظيم العائد من خلال الجمع بين دخل الإيجار ونمو قيمة العقار على المدى الطويل.",
       "point4": "نقوم بإدارة المحفظة العقارية بالكامل نيابةً عنك، ليكبر استثمارك العقاري بأمان وسلاسة."
     },
-
     "pillar3": {
       "title": "ما هو الاستثمار عقارات قيد الانشاء في دبي؟",
       "intro": "شراء عقار في مراحله الأولى، قبل أو أثناء البناء، مع خطط سداد مرنة تُدفع مباشرة للمطور على أقساط مريحة.",
@@ -315,5 +312,263 @@
   },
   "cta": {
     "whatsapp": "واتساب"
+  },
+
+  "aboutHero": {
+    "description1": "محمد قضماني هو متخصص في الاستثمار العقاري في دبي برؤية واضحة ونهج مهني يجمع بين الابتكار والخبرة والتحليل الدقيق لفرص السوق.",
+    "description2": "مسيرته الممتدة بين المقاولات وتطوير الأعمال والاستثمار العقاري مكنته من مساعدة مئات المستثمرين على اتخاذ قرارات شراء ناجحة وبناء محافظ عقارية مربحة.",
+
+    "yearsNumber": "18",
+    "yearsPlus": "+",
+    "labelTop": "سنوات من",
+    "line1": "الابتكار",
+    "line2": "والخبرة",
+    "since": "منذ 2006",
+
+    "imageAltDesk": "مشروع عقاري فاخر",
+    "imageAltMob": "صورة عقارية للجوال"
+  },
+
+  "buildingExcellence": {
+    "heading": {
+      "line1": "قرارات عقارية",
+      "line2": "تبني الثروة،",
+      "line3": "وليس مجرد عقارات"
+    },
+
+    "paragraph": "في <strong>شركة محمد قضماني للوساطة العقارية</strong>، نحن لا نبيع الوحدات فقط؛ بل نصمّم استراتيجيات استثمار كاملة. كل توصية تعتمد على معلومات شفافة، وتحليل واقعي للسوق، وخطة واضحة توازن بين تقدير رأس المال، ودخل الإيجار، وإدارة المخاطر. خلال عامين فقط، ساعد فريقنا المستثمرين على إتمام أكثر من 170 مليون درهم من الصفقات، بعوائد تتجاوز 8% سنويًا من خلال اختيار المشاريع المناسبة في الوقت المناسب.",
+
+    "stats": [
+      {
+        "count": "19",
+        "suffix": "+",
+        "label": "سنوات من الخبرة الريادية والعقارية."
+      },
+      {
+        "count": "170",
+        "suffix": "M+",
+        "label": "قيمة الصفقات المنجزة للمستثمرين."
+      },
+      {
+        "count": "8",
+        "suffix": "%+",
+        "label": "عائدات سنوية مستهدفة ضمن استراتيجيات استثمارية مدروسة."
+      }
+    ],
+
+    "dividerAlt": "خط فاصل زخرفي للقسم"
+  },
+
+  "aboutBuildingExcellence": {
+    "heading": "قرارات عقارية تبني ثروة، لا عقارات فقط",
+    "lead": "في محمد قضماني للوساطة العقارية لا نكتفي ببيع الوحدات، بل نصمم استراتيجيات استثمار متكاملة. كل توصية مبنية على معلومات شفافة، وتحليل واقعي للسوق، وخطة واضحة توازن بين نمو رأس المال، ودخل الإيجار، ومستوى المخاطرة. خلال عامين فقط، ساعد فريقنا المستثمرين على إغلاق صفقات تتجاوز 170 مليون درهم بعوائد سنوية تفوق 8% من خلال الدخول في المشاريع الصحيحة في التوقيت الصحيح.",
+    "stats": {
+      "experience": {
+        "label": "سنة",
+        "description": "من الخبرة الريادية والعقارية عبر عدة قطاعات."
+      },
+      "volume": {
+        "label": "170+ مليون درهم",
+        "description": "قيمة صفقات تم إغلاقها للمستثمرين خلال عامين فقط."
+      },
+      "returns": {
+        "label": "8%+",
+        "description": "عوائد سنوية مستهدفة من استراتيجيات استثمارية مُنظَّمة ومدروسة المخاطر."
+      }
+    }
+  },
+
+  "services": {
+    "title": "ماذا نفعل من أجل مستثمرينا",
+
+    "intro": "في <span class='brandHighlight'>شركة محمد قدمني للوساطة العقارية</span>، نحن لا نبيع العقارات فقط. بل نقوم بتحليل أهدافك، وضع استراتيجية واضحة، وتنفيذ كل خطوة معك — من اختيار المشروع المناسب وحتى التسليم، التأجير، إعادة البيع، والتأثيث.",
+
+    "cards": [
+      {
+        "title": "الاستشارات الاستثمارية واستراتيجيات البيع على الخارطة",
+        "items": [
+          "استشارة متعمقة لفهم رأس المال، الأهداف، ومستوى المخاطرة لديك.",
+          "اختيار المشاريع ذات أعلى إمكانات النمو في أهم مناطق دبي.",
+          "تقديم خطط استثمار قصيرة وطويلة المدى مبنية على تحليل سوق واقعي.",
+          "استشارات البيع على الخارطة: دراسات نمو رأس المال، تصميم خطط الدفع، وتأمين أفضل الوحدات قبل الإطلاق العام."
+        ]
+      },
+      {
+        "title": "بناء المحافظ العقارية وإدارة الممتلكات",
+        "items": [
+          "تصميم محافظ متوازنة تجمع بين <strong>عقارات الدخل</strong> و<strong>الأصول عالية النمو</strong>.",
+          "دمج الوحدات الجاهزة مع مشاريع البيع على الخارطة لتقليل المخاطر.",
+          "إدارة العقارات والتأجير: إيجاد المستأجرين، المتابعة، وتحسين الدخل الإيجاري.",
+          "إدارة كاملة للصيانة، المصاريف، والتقارير الدورية للأداء للمستثمرين."
+        ]
+      },
+      {
+        "title": "التسليم، إعادة البيع، والتأثيث",
+        "items": [
+          "خدمة فحص وتسلّم شاملة: فحص الوحدة، كشف العيوب، والإشراف على تصحيحها.",
+          "تجهيز العقار للتأجير أو إعادة البيع مع التشطيبات المناسبة والتموضع الصحيح.",
+          "خدمة إعادة بيع مميزة: تسويق فاخر، اختيار الجادين فقط، والبيع في الوقت الأمثل لتحقيق أعلى ربح.",
+          "التأثيث والتصميم الداخلي للوحدات الفاخرة لدعم تأجير أسرع وعوائد إيجارية أعلى."
+        ]
+      }
+    ],
+
+    "footer": "معنا، تحصل على شريك استثماري طويل الأمد يفهم سوق دبي، يقرأ توجهاته، ويقودك نحو <strong class='highlight'>أفضل النتائج بأقل قدر ممكن من المخاطرة</strong>."
+  },
+
+  "pillars": {
+    "vision": {
+      "title": "رؤيتنا",
+      "text": "بناء محفظة استثمارية عقارية قوية ومتنوعة توفر عوائد عالية، مستقرة وآمنة لمستثمرينا، وأن نكون الوجهة الأولى لكل من يبحث عن فرص عقارية موثوقة في دبي."
+    },
+    "mission": {
+      "title": "مهمتنا",
+      "text": "بناء نظام عمل مستدام يخلق فرص عمل لآلاف الأشخاص، وتطوير جيل جديد من رواد الأعمال الذين يساهمون بشكل إيجابي في المجتمع من خلال استثمارات عقارية مدروسة ومسؤولة."
+    },
+    "core": {
+      "title": "قيمنا الأساسية",
+      "subtitleTop": "نبني على",
+      "subtitleBottom": "قيم واضحة",
+      "p1": {
+        "title": "الشفافية",
+        "text": "كل رقم وكل تفاصيل واضحة وصادقة ومشروحة — ليتمكن المستثمر من اتخاذ قرارات بثقة كاملة."
+      },
+      "p2": {
+        "title": "الخبرة والالتزام",
+        "text": "قراراتنا مبنية على مراقبة مستمرة للسوق، بيانات حقيقية، والتزام حقيقي بتحقيق أفضل النتائج لكل مستثمر."
+      },
+      "p3": {
+        "title": "النتائج والاحترافية",
+        "text": "هدفنا الأول دائمًا هو تحقيق أعلى عائد ممكن بأقل مستوى من المخاطرة عبر محافظ احترافية مبنية على الأرقام."
+      }
+    }
+  },
+
+  "journey": {
+    "kicker": "مسيرتنا",
+    "heading": "من الإنشاءات إلى ريادة الاستثمار العقاري",
+
+    "2006": {
+      "title": "من الإرث العائلي إلى قطاع الإنشاءات",
+      "description": "انطلاقاً من عائلة لها خبرة قوية في المقاولات والعقار، يؤسس محمد شركة البيـرق للمقاولات في دبي ويبدأ بناء سجله الخاص في المشاريع والتنفيذ."
+    },
+
+    "2013": {
+      "title": "التوسع في قطاع التجميل",
+      "description": "ينتقل إلى تطوير الأعمال في قطاع التجميل في سوريا، مكتسباً خبرة عملية في بناء العلامات التجارية والإدارة والنمو القائم على العميل."
+    },
+
+    "2016": {
+      "title": "ريادة الأعمال في قطاع المطاعم",
+      "description": "يؤسس محمد ويدير عدة مطاعم في سوريا، مما يعزز فهمه للتدفق المالي والإدارة اليومية وإدارة المخاطر في الأسواق التنافسية."
+    },
+
+    "2023": {
+      "title": "تأسيس شركة محمد قدمني للعقارات",
+      "description": "بخبرة تمتد لسنوات في البناء وريادة الأعمال، يطلق محمد شركته العقارية في دبي والمتخصصة في الاستثمار العقاري الموجه للعوائد."
+    },
+
+    "2023_2025": {
+      "title": "بناء محافظ استثمارية ناجحة في دبي",
+      "description": "خلال عامين فقط، تساعد الشركة المستثمرين في إغلاق أكثر من 170 مليون درهم من الصفقات مع عوائد تزيد عن 8% من خلال الفرص المدروسة والمحافظ الاستثمارية والاهتمام الكامل بعد الشراء."
+    }
+  },
+
+  "aboutServices": {
+    "sectionTitle": "ماذا نقدم لمستثمرينا",
+    "intro": "في محمد قضماني للوساطة العقارية نقوم بأكثر من مجرد بيع عقارات. نحن نحلل أهدافك، ونصمم استراتيجية واضحة، وننفّذ معك كل خطوة — من اختيار المشروع المناسب وصولاً إلى التسليم، والتأجير، وإعادة البيع، والتأثيث.",
+    "cards": {
+      "investmentAdvisory": {
+        "title": "الاستشارات الاستثمارية واستراتيجية العقارات قيد الإنشاء",
+        "points": {
+          "p1": "استشارة معمقة لفهم رأس المال والأهداف ومستوى تحمّل المخاطر.",
+          "p2": "اختيار المشاريع ذات أعلى إمكانات نمو في أهم مناطق دبي.",
+          "p3": "تخطيط استثماري قصير وطويل المدى مدعوم بتحليل واقعي للسوق.",
+          "p4": "استشارات العقارات قيد الإنشاء: دراسة نمو الأسعار، تصميم خطط السداد، وتأمين أفضل الوحدات قبل الإطلاق العام."
+        }
+      },
+      "portfolioBuilding": {
+        "title": "بناء المحافظ العقارية وإدارة الأملاك",
+        "points": {
+          "p1": "تصميم محافظ متوازنة تجمع بين عقارات ذات تدفق نقدي وعقارات ذات نمو رأسمالي.",
+          "p2": "الجمع بين عقارات جاهزة ومشاريع قيد الإنشاء لتوزيع المخاطر.",
+          "p3": "إدارة وتأجير العقار: البحث عن المستأجرين، المتابعة، وتحسين العائد الإيجاري.",
+          "p4": "إدارة كاملة لأعمال الصيانة والمصاريف وإصدار تقارير أداء دورية للمستثمر."
+        }
+      },
+      "handoverResale": {
+        "title": "التسليم وإعادة البيع والتأثيث",
+        "points": {
+          "p1": "خدمة فحص وتسليم تفصيلية: معاينة الوحدة، اكتشاف العيوب، والإشراف على تصحيحها.",
+          "p2": "تجهيز العقار للتأجير أو إعادة البيع بالتشطيبات الصحيحة والتموضع المناسب.",
+          "p3": "خدمة إعادة بيع مميزة: تسويق فاخر، تصفية الجادّين من المشترين، والبيع في الوقت الأنسب لتعظيم الربح.",
+          "p4": "التأثيث والتصميم الداخلي للوحدات الفاخرة لدعم سرعة التأجير والحصول على إيجارات أعلى."
+        }
+      }
+    },
+    "footer": {
+      "text": "معنا، تحصل على شريك استثماري طويل الأمد يفهم سوق دبي، ويقرأ اتجاهاته، ويقودك نحو أفضل النتائج الممكنة بأقل قدر ممكن من المخاطر.",
+      "highlight": "أفضل النتائج الممكنة بأقل قدر ممكن من المخاطر"
+    }
+  },
+
+  "aboutBrandPillars": {
+    "vision": {
+      "title": "رؤيتنا",
+      "body": "بناء محفظة استثمارية عقارية قوية ومتنوعة تحقق عوائد عالية ومستقرة وآمنة لمستثمرينا، وأن نكون الوجهة الأولى لكل من يبحث عن فرص عقارية موثوقة في دبي."
+    },
+    "mission": {
+      "title": "رسالتنا",
+      "body": "بناء منظومة عمل مستدامة تخلق فرص عمل لآلاف الأشخاص، وتطوير جيل جديد من روّاد الأعمال الذين يساهمون إيجابياً في المجتمع من خلال استثمارات عقارية مسؤولة ومدروسة."
+    },
+    "pillars": {
+      "sectionTitle": "ركائزنا الأساسية",
+      "headingKicker": "نرتكز على",
+      "headingMain": "قيم واضحة",
+      "transparency": {
+        "title": "الشفافية",
+        "body": "كل رقم وكل تفصيل واضح وصادق ومشروح — ليتمكن المستثمر من اتخاذ قراراته بثقة كاملة."
+      },
+      "expertise": {
+        "title": "الخبرة والالتزام",
+        "body": "قراراتنا مبنية على متابعة مستمرة للسوق، وبيانات حقيقية، والتزام حقيقي بتحقيق أفضل النتائج لكل مستثمر."
+      },
+      "results": {
+        "title": "النتائج والاحترافية",
+        "body": "هدفنا الأول دائماً هو تحقيق أعلى عائد ممكن بأقل قدر من المخاطر، من خلال محافظ عقارية مُنظَّمة ومبنية على الأرقام."
+      }
+    }
+  },
+
+  "aboutJourney": {
+    "kicker": "رحلتنا",
+    "heading": "من عالم البناء إلى ريادة الاستثمار",
+    "steps": {
+      "2006": {
+        "year": "2006",
+        "title": "من إرث العائلة إلى عالم المقاولات",
+        "description": "من عائلة ذات خبرة طويلة في المقاولات والعقار، يؤسس محمد شركة \"البارق للمقاولات\" في دبي ويبدأ في بناء سجله الخاص في إدارة وتنفيذ المشاريع."
+      },
+      "2013": {
+        "year": "2013",
+        "title": "التوسع في قطاع الجمال",
+        "description": "ينتقل إلى تطوير الأعمال في قطاع التجميل في سوريا، مكتسباً خبرة عملية في بناء العلامات التجارية، والعمليات التشغيلية، والنمو المرتكز على رضا العملاء."
+      },
+      "2016": {
+        "year": "2016",
+        "title": "ريادة الأعمال في عالم المطاعم",
+        "description": "يؤسس ويدير مطاعم في سوريا، ما يعزز فهمه للتدفق النقدي، والعمليات اليومية، وإدارة المخاطر في الأسواق التنافسية."
+      },
+      "2023": {
+        "year": "2023",
+        "title": "تأسيس محمد قضماني للوساطة العقارية",
+        "description": "انطلاقاً من سنوات الخبرة في المقاولات وريادة الأعمال، يطلق شركة محمد قضماني للوساطة العقارية في دبي، والمتخصصة في الخدمات العقارية الموجهة للاستثمار."
+      },
+      "2023_2025": {
+        "year": "2023–2025",
+        "title": "بناء محافظ استثمارية للمستثمرين في دبي",
+        "description": "خلال عامين فقط، تساعد الشركة المستثمرين على إغلاق صفقات تتجاوز 170 مليون درهم بعوائد استثمارية تفوق 8%، مع التركيز على الفرص الذكية في العقارات قيد الإنشاء، وبناء المحافظ، والخدمات ما بعد الشراء."
+      }
+    }
   }
 }
