fixing projects page

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -381,7 +381,7 @@
   "services": {
     "title": "ماذا نفعل من أجل مستثمرينا",
 
-    "intro": "في <span class='brandHighlight'>شركة محمد قدمني للوساطة العقارية</span>، نحن لا نبيع العقارات فقط. بل نقوم بتحليل أهدافك، وضع استراتيجية واضحة، وتنفيذ كل خطوة معك — من اختيار المشروع المناسب وحتى التسليم، التأجير، إعادة البيع، والتأثيث.",
+    "intro": "في <span class='brandHighlight'>شركة محمد قضماني للوساطة العقارية</span>، نحن لا نبيع العقارات فقط. بل نقوم بتحليل أهدافك، وضع استراتيجية واضحة، وتنفيذ كل خطوة معك — من اختيار المشروع المناسب وحتى التسليم، التأجير، إعادة البيع، والتأثيث.",
 
     "cards": [
       {
@@ -464,7 +464,7 @@
     },
 
     "2023": {
-      "title": "تأسيس شركة محمد قدمني للعقارات",
+      "title": "تأسيس شركة محمد قضماني للعقارات",
       "description": "بخبرة تمتد لسنوات في البناء وريادة الأعمال، يطلق محمد شركته العقارية في دبي والمتخصصة في الاستثمار العقاري الموجه للعوائد."
     },
 
