--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -236,7 +236,7 @@
     "brand": {
       "logoBar": "محمد قضماني للوساطة العقارية",
       "corporateName": "محمد قضماني",
-      "corporateTitle": "سمسار عقاري",
+      "corporateTitle": "مستشار عقاري وخبير استثمار",
       "legal": {
         "tradeLicense": "رخصة تجارية: 1192580",
         "advertisingPermit": "تصريح إعلاني: 139532",
