--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -236,7 +236,7 @@
     "brand": {
       "logoBar": "Mohamad Kodmane Real Estate Brokers",
       "corporateName": "MOHAMAD KODMANE",
-      "corporateTitle": "REAL ESTATE BROKERS",
+      "corporateTitle": "Real Estate Consultant and Investment Expert",
       "legal": {
         "tradeLicense": "TRADE LICENSE: 1192580",
         "advertisingPermit": "ADVERTISING PERMIT: 139532",
@@ -249,7 +249,7 @@
       "penthouses": "PENTHOUSES",
       "communities": "COMMUNITIES",
       "mediaCenter": "MEDIA CENTER",
-      "aboutUs": "ABOUT US",
+      "aboutUs": "ABOUT",
       "contact": "CONTACT"
     },
     "projects": {
